[KOM-10] feat(api): implement subject and academic year management
